<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Speedometer</string>
	<string name="speed_kmh">Speed (km/h):</string>
	<string name="speed_ms">Speed (m/s)</string>
	<string name="cal_button">Calibrate</string>
	<string name="accel">Accel:</string>
	<string name="accel_x">Accel X:</string>
	<string name="accel_y">Accel Y:</string>
	<string name="accel_z">Accel Z:</string>
	<string name="lin_accel">Lin Accel:</string>
	<string name="vibration">Vibration:</string>
	<string name="grv_x">Gravity X:</string>
	<string name="grv_y">Gravity Y:</string>
	<string name="grv_z">Gravity Z:</string>
	<string name="grv">Gravity:</string>
	<string name="vel_x">Velocity X:</string>
	<string name="vel_y">Velocity Y:</string>
	<string name="vel_z">Velocity Z:</string>
	<string name="vel">Velocity:</string>
	<string name="motion">Motion:</string>
	<string name="samplerate">Samples / sec:</string>
	<string name="gps_speed">GPS Speed:</string>
	<string name="gps_accuracy">GPS Prec:</string>
	<string name="vel_accuracy">Vel Prec:</string>
				
	<string name="settings">Settings</string>
	<string name="accel_filter_resp_time">Acceleration Filter Response Time (msec)</string>
	<string name="mot_det_hyst">Motion Detection Hysteresis (%)</string>
	<string name="gravity_filter_resp_time">Gravity Filter Response Time (sec)</string>
	<string name="velocity_filter_resp_time">Velocity Filter Response Time (min)</string>
	<string name="velocity_red_factor">Velocity Reduction Factor</string>
	<string name="done">Done</string>
						
</resources>