
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/linearLayout1"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:gravity="center_horizontal"
    	android:orientation="vertical" >

        <TextView
        	android:id="@+id/textView3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/settings"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
        	android:id="@+id/tableLayout1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

            <TableRow
            	android:id="@+id/tableRow5"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:gravity="center" >

            </TableRow>

        	<TableRow
        		android:id="@+id/tableRow1"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center" >

        		<TextView
        			android:id="@+id/textView1"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/gravity_filter_resp_time"
        			android:textAppearance="?android:attr/textAppearanceSmall" />

        	</TableRow>

        	<TableRow
        		android:id="@+id/tableRow2"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center|center_horizontal" >

        		<SeekBar
        			android:id="@+id/seekBar1"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content" />

        		<TextView
        			android:id="@+id/grv_flt_resp_time_val"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_marginLeft="6dp"
        			android:text="Small Text"
        			android:textAppearance="?android:attr/textAppearanceSmall" />

        	</TableRow>

        	<TableRow
        		android:id="@+id/tableRow3"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center" >

        		<TextView
        			android:id="@+id/TextView02"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/velocity_filter_resp_time"
        			android:textAppearance="?android:attr/textAppearanceSmall" />

        	</TableRow>

        	<TableRow
        		android:id="@+id/tableRow4"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center" >

        		<SeekBar
        			android:id="@+id/SeekBar01"
        			android:layout_width="220dp"
        			android:layout_height="wrap_content" />

        		<TextView
        			android:id="@+id/vel_flt_resp_time_val"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_marginLeft="6dp"
        			android:text="Small Text"
        			android:textAppearance="?android:attr/textAppearanceSmall" />

        	</TableRow>

        </TableLayout>

        <Button
        	android:id="@+id/done_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/done" />

    </LinearLayout>
